Checkpoint 4: Added Search feature, two endpoints
- GET /api/movies/movie-name/{movie_name}
- GET /api/movies/director-name/{director_name}
